--- a/exarea/View/Login.storyboard
+++ b/exarea/View/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7op-uc-Qam">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dAJ-I1-Y7R">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -476,9 +476,81 @@
             </objects>
             <point key="canvasLocation" x="-1342" y="-692"/>
         </scene>
+        <!--Splash View Controller-->
+        <scene sceneID="emd-ZT-SHy">
+            <objects>
+                <viewController id="dAJ-I1-Y7R" customClass="SplashViewController" customModule="exarea" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dMp-4G-Ihu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C87-dh-0ga">
+                                <rect key="frame" x="87.5" y="221" width="200" height="225.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ddb-fC-Np1">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="225.5"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-logo" translatesAutoresizingMaskIntoConstraints="NO" id="dLv-G4-s0i">
+                                                <rect key="frame" x="50" y="0.0" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="3tC-Gc-CyW"/>
+                                                    <constraint firstAttribute="width" secondItem="dLv-G4-s0i" secondAttribute="height" id="Orj-YC-yg5"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exarea" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yOc-NW-c38">
+                                                <rect key="frame" x="42.5" y="100" width="115" height="50.5"/>
+                                                <fontDescription key="fontDescription" name="SegoeUI-Bold" family="Segoe UI" pointSize="37"/>
+                                                <color key="textColor" red="0.99215686270000003" green="0.83137254900000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQp-xS-fNw" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                                <rect key="frame" x="0.0" y="175.5" width="200" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="qcv-S2-Unu"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                                        <color key="value" red="0.87450980389999999" green="0.15686274510000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="typeName" value="ballPulse"/>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="2Kw-HE-tb4"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ddb-fC-Np1" secondAttribute="trailing" id="HIR-CK-O9I"/>
+                                    <constraint firstItem="ddb-fC-Np1" firstAttribute="leading" secondItem="C87-dh-0ga" secondAttribute="leading" id="IjP-9E-x1U"/>
+                                    <constraint firstItem="ddb-fC-Np1" firstAttribute="top" secondItem="C87-dh-0ga" secondAttribute="top" id="SGD-ts-SVC"/>
+                                    <constraint firstAttribute="bottom" secondItem="ddb-fC-Np1" secondAttribute="bottom" id="rwT-qf-pWS"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="C87-dh-0ga" firstAttribute="centerX" secondItem="dMp-4G-Ihu" secondAttribute="centerX" id="YNo-48-zqe"/>
+                            <constraint firstItem="C87-dh-0ga" firstAttribute="centerY" secondItem="dMp-4G-Ihu" secondAttribute="centerY" id="caM-lf-WdB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ZOl-Ow-a93"/>
+                    </view>
+                    <connections>
+                        <outlet property="centerView" destination="C87-dh-0ga" id="b6N-dq-Ucy"/>
+                        <outlet property="loadingIndicator" destination="AQp-xS-fNw" id="3xZ-VL-H1T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4uq-Bc-hs1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1364" y="-17"/>
+        </scene>
     </scenes>
     <resources>
         <image name="icon-lock-90" width="22.5" height="22.5"/>
         <image name="icon-mobile-90" width="22.5" height="22.5"/>
+        <image name="image-logo" width="192" height="192"/>
     </resources>
 </document>
